// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilesDrop should show page title and configuration theme general slogan 1`] = `
<div id="files-drop-container" class="oc-height-1-1 oc-flex oc-flex-column oc-flex-between">
  <h1 class="oc-invisible-sr">page route title</h1>
  <div class="oc-p oc-height-1-1">
    <div class="oc-flex oc-flex-column oc-flex-middle oc-height-1-1">
      <div class="oc-text-center oc-width-1-1 oc-width-xxlarge@m">
        <h2>admin shared this folder with you for uploading</h2>
        <file-upload-stub btnlabel="Drop files here to upload or click to select file" btnclass="" id="files-drop-zone" class="uk-flex uk-flex-middle uk-flex-center uk-placeholder"></file-upload-stub>
        <div id="previews" hidden="hidden"></div>
      </div>
      <!---->
    </div>
  </div>
  <div class="oc-text-center">
    <p>some slogan</p>
  </div>
</div>
`;

exports[`FilesDrop should show spinner with loading text if wrapper is loading 1`] = `
<div id="files-drop-container" class="oc-height-1-1 oc-flex oc-flex-column oc-flex-between">
  <h1 class="oc-invisible-sr">page route title</h1>
  <div class="oc-p oc-height-1-1">
    <div class="oc-flex oc-flex-column oc-flex-middle">
      <h2 class="oc-login-card-title">
        <translate-stub tag="span">Loading public link…</translate-stub>
      </h2>
      <oc-spinner-stub arialabel="" size="medium" aria-hidden="true"></oc-spinner-stub>
    </div>
  </div>
  <div class="oc-text-center">
    <p>some slogan</p>
  </div>
</div>
`;

exports[`FilesDrop when "loading" is set to false should show error message if only it has truthy value 1`] = `
<div id="files-drop-container" class="oc-height-1-1 oc-flex oc-flex-column oc-flex-between">
  <h1 class="oc-invisible-sr">page route title</h1>
  <div class="oc-p oc-height-1-1">
    <div class="oc-flex oc-flex-column oc-flex-middle oc-height-1-1">
      <div class="oc-text-center oc-width-1-1 oc-width-xxlarge@m">
        <h2>admin shared this folder with you for uploading</h2>
        <file-upload-stub btnlabel="Drop files here to upload or click to select file" btnclass="" id="files-drop-zone" class="uk-flex uk-flex-middle uk-flex-center uk-placeholder"></file-upload-stub>
        <div id="previews" hidden="hidden"></div>
      </div>
      <div class="oc-text-center">
        <h2>
          <translate-stub tag="span">An error occurred while loading the public link</translate-stub>
        </h2>
        <p class="oc-m-rm">This is a test error message</p>
      </div>
    </div>
  </div>
  <div class="oc-text-center">
    <p>some slogan</p>
  </div>
</div>
`;

exports[`FilesDrop when "loading" is set to false should show share information title 1`] = `
<div id="files-drop-container" class="oc-height-1-1 oc-flex oc-flex-column oc-flex-between">
  <h1 class="oc-invisible-sr">page route title</h1>
  <div class="oc-p oc-height-1-1">
    <div class="oc-flex oc-flex-column oc-flex-middle oc-height-1-1">
      <div class="oc-text-center oc-width-1-1 oc-width-xxlarge@m">
        <h2>admin shared this folder with you for uploading</h2>
        <file-upload-stub btnlabel="Drop files here to upload or click to select file" btnclass="" id="files-drop-zone" class="uk-flex uk-flex-middle uk-flex-center uk-placeholder"></file-upload-stub>
        <div id="previews" hidden="hidden"></div>
      </div>
      <!---->
    </div>
  </div>
  <div class="oc-text-center">
    <p>some slogan</p>
  </div>
</div>
`;
